--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "QA",
+  "name": "Lite",
   "version": "1.0.0",
-  "description": "Customer QA theme.",
+  "description": "Helpdesk theme.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
